testsuite/tests/ghc-regress/typecheck/should_fail/tcfail090.hs
{-# OPTIONS -fglasgow-exts #-}

module ShouldFail where

import GHC.Base

die :: Int -> ByteArray#
die _ = undefined
